# Quake-2

./: .gitmodules  CMakeLists.txt  Dockerfile  Quake-2.code-workspace  compose-dev.yaml  dev-setup.sh  enumeration_sort.py  note.txt
client/: cdaudio.h  cl_cin.c  cl_ents.c  cl_fx.c  cl_input.c  cl_inv.c  cl_main.c  cl_newfx.c  cl_parse.c  cl_pred.c  cl_scrn.c  cl_tent.c  cl_view.c  client.h  console.c  console.h  in_glfw.c  input.h  keys.c  keys.h  menu.c  qmenu.c  qmenu.h  ref.h  screen.h  snd_dma.c  snd_loc.h  snd_mem.c  snd_miniaudio.c  snd_miniaudio_imp.c  sound.h
common/: nakama.h
game/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  game.h  m_actor.c  m_berserk.c  m_boss2.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_insane.c  m_medic.c  m_move.c  m_mutant.c  m_parasite.c  m_soldier.c  (+9 more)
game/monster/: m_actor.c  m_berserk.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flash.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_insane.c  m_medic.c  m_move.c  m_mutant.c  m_parasite.c  m_soldier.c  m_supertank.c  m_tank.c
game/player/: p_client.c  p_hud.c  p_trail.c  p_view.c  p_weapon.c
null/: cd_null.c  glimp_null.c  in_null.c  snddma_null.c  swimp_null.c  vid_null.c
qcommon/: cmd.c  cmodel.c  common.c  cvar.c  files.c  net_chan.c  net_libuv.c  pmove.c  qcommon.h  qfiles.h  sql.c  sql.h
ref_gl/: gl_beam.c  gl_bqn.h  gl_bqn_grade.c  gl_bqn_select.c  gl_compute.c  gl_compute.h  gl_draw.c  gl_image.c  gl_light.c  gl_local.h  gl_mesh.c  gl_model.c  gl_model.h  gl_model_not_found.c  gl_particle.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_sky.c  gl_sprite.c  gl_thin.c  gl_thin.h  gl_thin_cpp.h  gl_warp.c  glimp_glfw.c  qgl.h  qgl_glfw.c  render_mesh.c  render_mesh.h
remove/: gl_bqn.h  gl_bqn_grade.c
server/: server.h  sv_ccmds.c  sv_ents.c  sv_game.c  sv_init.c  sv_main.c  sv_null.c  sv_send.c  sv_user.c  sv_world.c
win32/: cd_win.c  conproc.c  glw_imp.c  glw_win.h  in_win.c  net_wins.c  q_shwin.c  qgl_win.c  rw_ddraw.c  rw_dib.c  rw_imp.c  rw_win.h  snd_win.c  sys_win.c  vid_dll.c  vid_menu.c  winquake.h
